# C-CPP

C/KokonaislukutaulukonKasittelyOsoittimiaKayttaen/: CMakeLists.txt  main.c
C/MatkakorttiClla/: CMakeLists.txt  main.c
C/MerkkienKasittelyPieninaKokonaislukuina/: CMakeLists.txt  main.c
C/MerkkijonojenYhdistaminen/: CMakeLists.txt  main.c
C/MerkkijononKaantaminenMuistissa/: CMakeLists.txt  main.c  stdafx.c  stdafx.h
C/TiedonLukeminen/: CMakeLists.txt  main.c
CPP/Matkajarjestelma/: CMakeLists.txt  Matkakortti.cpp  Matkakortti.h  stdafx.cpp  stdafx.h
CPP/teh10/: CMakeLists.txt  Leimaaja.cpp  Leimaaja.h  Matkajarjestelma.cpp  Matkakortti.cpp  Matkakortti.h  stdafx.h
CPP/teh12/: CMakeLists.txt  DateTime.cpp  HenkiloKortti.cpp  HenkiloKortti.h  Leimaustapahtuma.cpp  Lompakko.cpp  Lompakko.h  Matkakortti.cpp  Matkakortti.h  Matkatyyppi.h  Omistaja.cpp  Omistaja.h  Paneeli.cpp  Paneeli.h  stdafx.h
CPP/teh14/: CMakeLists.txt  DateTime.h  Leimaaja.cpp  Leimaaja.h  Leimaustapahtuma.h  Matkajarjestelma.cpp  Matkakortti.cpp  Matkakortti.h
CPP/teh2/: CMakeLists.txt  (+4 more)
CPP/teh6/: CMakeLists.txt
CPP/teh6-b/: CMakeLists.txt  DateTime.cpp  IOHelper.h  Leimaaja.cpp  Leimaaja.h  Leimaustapahtuma.cpp  Matkakortti.cpp  Matkakortti.h  stdafx.h
CPP/teh6/HeaderFiles/: Leimaaja.h  Matkakortti.h
CPP/teh6/SourceFiles/: DateTime.cpp  IOHelper.cpp  Leimaaja.cpp  Matkajarjestelma.cpp  Matkakortti.cpp  stdafx.cpp
CPP/teh7-8/: CMakeLists.txt  IOHelper.cpp  Leimaaja.cpp  Leimaaja.h  Leimaustapahtuma.cpp  Leimaustapahtuma.h  Matkajarjestelma.cpp  Matkakortti.cpp  Matkakortti.h
(+17 files in other folders)
